# virtual_keyboard

./: .gitignore  CLAUDE.md  README.md  app.py  benchmark.py  config.py  engines.py  keyboard.html  main.py  midi.py  midi_model.py  pyproject.toml  requirements.txt
.github/workflows/: sync-to-hf.yml
static/: README.md  engine.js  keyboard.js  styles.css
