[project]
name = "virtual-keyboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "einops>=0.6",
    "einx>=0.3.0",
    "gradio==5.49.1",
    "huggingface-hub>=1.4.1",
    "mido>=1.3.3",
    "spaces>=0.47.0",
    "torch==2.9.1",
]
